<resources>
<string name="about">about this app</string>
<string name="account">account</string>
<string name="account_added">account has been configured.</string>
<string name="account_add_summary">authenticate access from this app to your Imgur account.</string>
<string name="account_add_title">account authentication</string>
<string name="account_all">all account</string>
<string name="account_anonymous">(anonymous)</string>
<string name="account_delete_summary">remove access token of this app and your Imgur account.</string>
<string name="account_delete_title">remove account authentication</string>
<string name="account_info_querying">retrieving account information&#8230;</string>
<string name="account_not_selected">account is not selected.</string>
<string name="account_settings">account settings</string>
<string name="act_appinfo"		 >Imgur Mushroom/ about this app</string>
<string name="act_arrange"		 >Imgur Mushroom/ image arrange</string>
<string name="act_history"		 >Imgur Mushroom/ upload history</string>
<string name="act_main"			 >Imgur Mushroom</string>
<string name="act_multiple"		 >Imgur bulk upload</string>
<string name="act_oauth"		 >Imgur Mushroom/ account authorization</string>
<string name="act_pref"			 >Imgur Mushroom/ setting</string>
<string name="act_resize_preset" >Imgur Mushroom/ resize presets</string>
<string name="album_add">create new album</string>
<string name="album_all">all albums</string>
<string name="album_delete">delete album %1$s&#8230;</string>
<string name="album_delete_confirm">delete album %1$s ?</string>
<string name="album_description">description</string>
<string name="album_layout">layout</string>
<string name="album_loading">(loading..)</string>
<string name="album_loading_wait">please wait for reload album list&#8230;</string>
<string name="album_load_error">failed to loading album list</string>
<string name="album_not_select">(no album)</string>
<string name="album_option_non_select">(account default)</string>
<string name="album_privacy">privacy</string>
<string name="album_title">title</string>
<string name="album_title_empty">album title is required.</string>
<string name="album_title_invalid_char">album title contains incorrect character.</string>
<string name="app_name"			 >Imgur Mushroom</string>
<string name="autostart_settings">laziness settings</string>
<string name="auto_rotate_summary">If checked,automatically rotate using image\'s metadata when start editing. (Android 2.1 or later)</string>
<string name="auto_rotate_title">auto rotate</string>
<string name="cancel">cancel</string>
<string name="cancelled">operation was cancelled</string>
<string name="capture">capture</string>
<string name="capture_missing">missing app to capture image</string>
<string name="close">close</string>
<string name="crop_bottom">B</string>
<string name="crop_left">L</string>
<string name="crop_percent_max">99.99%</string>
<string name="crop_right">R</string>
<string name="crop_top">T</string>
<string name="dash3">&#8230;</string>
<string name="db_seek_error">database access error</string>
<string name="delete_complete">image was deleted.</string>
<string name="delete_hash_invalid">maybe already deleted.</string>
<string name="delete_hash_missing">missing delete hash</string>
<string name="disable_ssl_certificate_validation_summary">if checked,this app don\'t validate server\'s SSL certificate. helpful for avoid SSL certificate error, but this option has security risk.</string>
<string name="disable_ssl_certificate_validation_title">disable validation of SSL certificate</string>
<string name="edit">edit</string>
<string name="edit_autostart_summary">if checked, automatically start editor when image is picked.</string>
<string name="edit_autostart_title">auto start editor</string>
<string name="edit_progress_title">processing..</string>
<string name="edit_settings">image editor settings</string>
<string name="file_access_error">cannot access to file: %1$s</string>
<string name="file_temp_error">failed to prepare temporary file</string>
<string name="history">history</string>
<string name="history_cleared">history data was cleared.</string>
<string name="history_clear_message">All history data that saved on this app will be deleted. the image data on Imgur\'s server is not deleted.</string>
<string name="history_clear_title">clear all history</string>
<string name="history_delete_confirm">delete this image from server?</string>
<string name="history_empty">no history found.</string>
<string name="history_export">export history</string>
<string name="history_export_complete">%1$s history data was copied to clipboard.</string>
<string name="history_export_confirm">history data that matches selected account and album will be copied to clipboard.</string>
<string name="image_not_selected">image data is not selected.</string>
<string name="image_output_dir_desc">please specify output folder</string>
<string name="image_output_dir_summary"></string>
<string name="image_output_dir_title">output folder</string>
<string name="jpeg_quality_desc">please input JPEG compression quality (10..100)</string>
<string name="jpeg_quality_summary">JPEG compression quality</string>
<string name="jpeg_quality_title">JPEG quality</string>
<string name="net_error_resolver">connection error(%1$s)</string>
<string name="net_error_timeout">network timeout(%1$s)</string>
<string name="oauth_error_missing_token">missing access token in server response</string>
<string name="oauth_error_server_unavailable">Imgur API server is unavailable</string>
<string name="oauth_start">restart oAuth</string>
<string name="ok">OK</string>
<string name="other_task_detected">upload function is currently used by other task. Do you want to stop it and start new upload task?</string>
<string name="output_style_settings">URL settings</string>
<string name="output_style_summary">type of output URL</string>
<string name="output_style_title">output type</string>
<string name="output_to_clipboard">URL was copied to clipboard</string>
<string name="picker">pick</string>
<string name="picker_autostart_summary">if checked, automatically start file picker when start.</string>
<string name="picker_autostart_title">auto start picker</string>
<string name="picker_missing">missing app to choose the file.</string>
<string name="please_wait">Please wait..</string>
<string name="plus">+</string>
<string name="preview_disabled_summary">if checked, disable image preview to save native heap memory.</string>
<string name="preview_disabled_title">disable preview</string>
<string name="ratelimit_checkdate">last check</string>
<string name="ratelimit_remain_limit">API request remain/limit</string>
<string name="ratelimit_reset">next reset</string>
<string name="rate_limit_check_title">show rate limit of Imgur API</string>
<string name="resize_checkbox_longside">limit long side to specified pixel</string>
<string name="resize_checkbox_percent">scale to specified percent(1..99)</string>
<string name="resize_checkbox_shortside">limit short side to specified pixel</string>
<string name="resize_disabled">no resize</string>
<string name="resize_error_mode_not_selected">Error: resize mode is not selected</string>
<string name="resize_error_value_not_number">Error: specified value is not integer</string>
<string name="resize_error_value_too_large">Error: specified value is too large.\nplease input integer &lt;= %1$s</string>
<string name="resize_error_value_too_small">Error: specified value is too small.\nplease input integer &gt;= 1</string>
<string name="resize_limit_long">limit long side to %1$s px</string>
<string name="resize_limit_short">limit short side to %1$s px</string>
<string name="resize_new_preset">new preset</string>
<string name="resize_percent">scale %1$s percents</string>
<string name="resize_preset_delete">delete this preset?</string>
<string name="resize_value_title">value:</string>
<string name="save">save</string>
<string name="save_error_detail_summary">if checked, save error detail from Imgur to SD card. destination is the output folder that configured above, file name will be match to log*.txt</string>
<string name="save_error_detail_title">save error detail to SD card</string>
<string name="selection_added">picked/captured image was added to selection list</string>
<string name="selection_remove">remove from selection</string>
<string name="setting">settings</string>
<string name="site_top">Imgur website toppage</string>
<string name="storage_not_directory">external storage is not presented</string>
<string name="storage_not_writable">external storage is not writable</string>
<string name="test_error_format_title">show saved errors</string>
<string name="text_output_prefix_summary">this text is inserted to before the URL</string>
<string name="text_output_prefix_title">prefix text</string>
<string name="text_output_suffix_summary">this text is appended to after the URL</string>
<string name="text_output_suffix_title">suffix text</string>
<string name="too_large_data">too large data</string>
<string name="trouble_shooting_settings">trouble shooting settings</string>
<string name="upload">upload</string>
<string name="upload_autostart_summary">if checked, automatically start upload after image is selected.</string>
<string name="upload_autostart_title">auto start upload</string>
<string name="upload_cancelled">upload was cancelled.</string>
<string name="upload_cancel_by_other_task">upload was cancelled by other task.</string>
<string name="upload_multi_title">bulk upload\n(file %1$s/%2$s)</string>
<string name="upload_network_waiting">ネットワーク接続の状態を確認しています…</string>
<string name="upload_notification_message">uploading&#8230;</string>
<string name="upload_notification_ticker">upload start.</string>
<string name="upload_pending_message">other upload task is running. please wait.\nif this message is shown very long duration, please try &#8220;clear upload task&#8221; in setting. </string>
<string name="upload_pending_title">prepare&#8230;</string>
<string name="upload_progress">uploading&#8230;</string>
<string name="upload_progress2">uploading&#8230;(try %1$s)</string>
<string name="upload_progress_digest">calculate digest&#8230;</string>
<string name="upload_progress_sizecheck">calculate upload size&#8230;</string>
<string name="upload_wait_response">waiting response&#8230;</string>
<string name="uri_parse_error">cannot detect file path from URI:\n%1$s</string>
<string name="usage">online manual</string>
<string name="about_thisapp">About this app:\nthis is image uploader for Imgur, and also Mushroom IME extension.</string>
<string name="about_imgur">
About Imgur:
\nImgur is image sharing service by Imgur, LLC. please check http://imgur.com/ for more details.
\nThe Imgur logo and “IMGUR” are trademarks of Imgur LLC and are used here for informational purposes only.
“Imgur Mushroom” is not affiliated with Imgur and has not been reviewed or approved by Imgur.
</string>
<string name="about_oauth_signpost">
this app contains the code from oauth-signpost. https://github.com/kaeppler/signpost
</string>
<string name="about_google_data">
this app contains the code from Google Data APIs Client Library. https://developers.google.com/gdata/docs/client-libraries
</string>
<string name="oauth_error_server_certificate">
This machine missing correct clock setting, or missing recent Geotrust SSL certificates.
these are required to SSL connection with server of Imgur.
</string>
<string-array name="output_style_list_captions">
	<item>URL to direct image</item>
	<item>URL to Imgur\'s site</item>
</string-array>
<string-array name="output_style_list_values">
	<item>0</item>
	<item>1</item>
</string-array>
<string-array name="history_context_menu">
	<item>Input this URL</item>
	<item>Browse image URL</item>
	<item>Browse Imgur\'s site</item>
	<item>delete image on the server</item>
	<item>delete history</item>
	<item>other &#8230;</item>
</string-array>
</resources>