<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true"
>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="8dp"
	>
		<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="20dp"
			android:id="@+id/btnAppName"
		/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/frame_imageinfo"
			android:textColor="#ffffff"
			android:text="@string/about_thisapp"
			android:autoLink="email"
		/>
		<TextView
			android:layout_marginTop="20dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/frame_imageinfo"
			android:textColor="#ffffff"
			android:text="@string/about_imgur"
			android:autoLink="web"
		/>

		<TextView
			android:layout_marginTop="20dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/frame_imageinfo"
			android:textColor="#ffffff"
			android:text="@string/about_oauth_signpost"
			android:autoLink="web"
		/>
		<TextView
			android:layout_marginTop="20dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/frame_imageinfo"
			android:textColor="#ffffff"
			android:text="@string/about_google_data"
			android:autoLink="web"
		/>
	</LinearLayout>
</ScrollView>
