<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
	>
		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="7dp"
			android:paddingRight="7dp"
			android:drawablePadding="0dp"
			style="@style/gallery"
			android:text="@string/picker"
			android:id="@+id/btnPicker"
			android:nextFocusLeft="@+id/btnCapture"
		/>
		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="7dp"
			android:paddingRight="7dp"
			android:drawablePadding="0dp"
			style="@style/camera"
			android:text="@string/capture"
			android:id="@+id/btnCapture"
			android:nextFocusRight="@+id/btnPicker"
		/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
	>
		<Spinner
			android:layout_width="0dp"
			android:layout_height="48dp"
			android:layout_weight="1"
			android:minHeight="48dp"
			android:id="@+id/account"
		/>
		<Spinner
			android:layout_width="0dp"
			android:layout_height="48dp"
			android:layout_weight="1"
			android:minHeight="48dp"
			android:id="@+id/album"
		/>
		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="7dp"
			android:paddingRight="7dp"
			android:layout_weight="0"
			android:minWidth="48dp"
			android:text="@string/plus"
			android:id="@+id/btnAlbumNew"
		/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
	>
		<View android:layout_width="12dp" android:layout_height="0dp" android:layout_weight="2" />
		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="7dp"
			android:paddingRight="7dp"
			android:layout_weight="1"
			android:minWidth="48dp"
			android:singleLine="true"
			android:text="@string/upload"
			android:id="@+id/btnUpload"
			android:nextFocusLeft="@+id/btnCancel"
			android:nextFocusUp="@+id/account"
		/>
		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="7dp"
			android:paddingRight="7dp"
			android:layout_weight="0"
			android:minWidth="48dp"
			android:text="@string/dash3"
			android:id="@+id/btnSetting"
		/>
		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="7dp"
			android:paddingRight="7dp"
			android:layout_weight="0"
			android:minWidth="48dp"
			android:id="@+id/btnCancel"
			android:text="@string/cancel"
			android:nextFocusRight="@+id/btnUpload"
		/>
	</LinearLayout>
</LinearLayout>
