<?xml version="1.0" encoding="utf-8"?>
<merge
	xmlns:android="http://schemas.android.com/apk/res/android"
>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
	>
		<ImageButton
			android:layout_width="48dp"
			android:layout_height="48dp"
			android:padding="4dp"
			android:scaleType="centerInside"
			style="@style/rot_left"
			android:id="@+id/btnRotateLeft"
			android:nextFocusLeft="@+id/btnResize"
		/>
		<ImageButton
			android:layout_width="48dp"
			android:layout_height="48dp"
			android:padding="4dp"
			android:scaleType="centerInside"
			style="@style/rot_right"
			android:id="@+id/btnRotateRight"
			android:nextFocusRight="@+id/btnResize"
		/>
		<View
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_weight="1"
		/>
		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="7dp"
			android:paddingRight="7dp"
			android:id="@+id/btnResize"
			android:nextFocusLeft="@+id/btnRotateRight"
			android:nextFocusRight="@+id/btnRotateLeft"
		/>
	</LinearLayout>
	<TableLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:stretchColumns="0"
	>
		<TableRow
			 android:minHeight="40dp"
			 android:gravity="center_vertical"
		>
			<SeekBar
				android:paddingLeft="24dp"
				android:paddingRight="24dp"
				android:id="@+id/sbCropLeft"
				android:nextFocusLeft="@+id/sbCropLeft"
				android:nextFocusRight="@+id/sbCropLeft"
			/>
			<TextView
				android:textColor="#ffffff"
				android:text="@string/crop_left"
			/>
			<TextView
				android:layout_marginLeft="8dp"
				android:gravity="right|center_vertical"
				android:textColor="#ffffff"
				android:text="@string/crop_percent_max"
				android:id="@+id/tvCropLeft"
			/>
		</TableRow>
		<TableRow
			 android:minHeight="40dp"
			 android:gravity="center_vertical"
		>
			<SeekBar
				android:paddingLeft="24dp"
				android:paddingRight="24dp"
				android:id="@+id/sbCropTop"
				android:nextFocusLeft="@+id/sbCropTop"
				android:nextFocusRight="@+id/sbCropTop"
			/>
			<TextView
				android:textColor="#ffffff"
				android:text="@string/crop_top"
			/>
			<TextView
				android:layout_marginLeft="8dp"
				android:gravity="right|center_vertical"
				android:textColor="#ffffff"
				android:text="@string/crop_percent_max"
				android:id="@+id/tvCropTop"
			/>
		</TableRow>
		<TableRow
			android:minHeight="40dp"
			android:gravity="center_vertical"
		>
			<SeekBar
				android:paddingLeft="24dp"
				android:paddingRight="24dp"
				android:id="@+id/sbCropRight"
				android:nextFocusLeft="@+id/sbCropRight"
				android:nextFocusRight="@+id/sbCropRight"
			/>
			<TextView
				android:textColor="#ffffff"
				android:text="@string/crop_right"
			/>
			<TextView
				android:layout_marginLeft="8dp"
				android:gravity="right|center_vertical"
				android:textColor="#ffffff"
				android:text="@string/crop_percent_max"
				android:id="@+id/tvCropRight"
				
			/>
		</TableRow>
		<TableRow
			android:minHeight="40dp"
			android:gravity="center_vertical"
		>
			<SeekBar
				android:paddingLeft="24dp"
				android:paddingRight="24dp"
				android:id="@+id/sbCropBottom"
				android:nextFocusLeft="@+id/sbCropBottom"
				android:nextFocusRight="@+id/sbCropBottom"
			/>
			<TextView
				android:textColor="#ffffff"
				android:text="@string/crop_bottom"
			/>
			<TextView
				android:layout_marginLeft="8dp"
				android:gravity="right|center_vertical"
				android:textColor="#ffffff"
				android:text="@string/crop_percent_max"
				android:id="@+id/tvCropBottom"
			/>
		</TableRow>
	</TableLayout>
</merge>

