<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
>
	<ScrollView
	  android:layout_width="match_parent"
	  android:layout_height="0dp"
	  android:layout_weight="1"
	  android:fillViewport="true"
	>
		<LinearLayout
		  android:layout_width="match_parent"
		  android:layout_height="wrap_content"
		  android:orientation="vertical"
		>
			<LinearLayout
				android:layout_marginTop="4dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
			>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/album_title"
				/>
				<EditText
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:singleLine="true"
					android:inputType="text"
					android:id="@+id/etTitle"
				/>
			</LinearLayout>
			<LinearLayout
				android:layout_marginTop="4dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
			>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/album_description"
				/>
				<EditText
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:singleLine="true"
					android:inputType="textMultiLine"
					android:id="@+id/etDesc"
				/>
			</LinearLayout>
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:baselineAligned="false"
			>
				<LinearLayout
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:orientation="vertical"
				>
					<TextView
						android:layout_marginTop="4dp"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/album_privacy"
					/>
					<Spinner
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:id="@+id/spPrivacy"
					/>
				</LinearLayout>
				<LinearLayout
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:orientation="vertical"
				>
					<TextView
						android:layout_marginTop="4dp"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/album_layout"
					/>
					<Spinner
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:id="@+id/spLayout"
					/>
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
	<TextView
		android:layout_marginTop="8dp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/tvError"
		android:textColor="#ff0000"
	/>
</LinearLayout>
